# confwire

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  PR.md  README.md  pyproject.toml  test.py
.github/: pull_request_template.md
.github/workflows/: pr-checks.yml  publish.yml  quality.yml  test.yml
confwire/: __init__.py  _docs.py  build.py  config.py  io.py
confwire/utils/: __init__.py  misc.py  path.py  version_utils.py
docs/: Makefile  advanced.md  api.md  build.md  changelog.md  conf.py  configuration.md  contributing.md  gen_versions_json.py  getting_started.md  index.md  installation.md  make.bat  usage.md
docs/_static/: versions.css
docs/_templates/: versions.html
docs/_templates/sidebar/: versions.html
tests/: test_build.py  test_config.py  test_core.py
tests/data/config/: code.py  deprecated.py  deprecated_as_base.py  expected.py  f.py  i_child.py  l.py  m.py  n.py  q.py  r.py  t.py  u.py  v.py
