[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confwire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "addict>=2.4.0",
    "pyyaml>=6.0",
    "yapf>=0.43.0",
]

[project.scripts]
docs-build = "confwire._docs:build"
docs-multiversion = "confwire._docs:build_multiversion"

[project.urls]
Homepage = "https://github.com/sri-dhurkesh/confwire"
Repository = "https://github.com/sri-dhurkesh/confwire"
Issues = "https://github.com/sri-dhurkesh/confwire/issues"

[tool.hatch.version]
path = "confwire/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/confwire",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["confwire"]

[dependency-groups]
docs = [
    "myst-parser>=4.0.1",
    "sphinx<7.2",
    "sphinx-material>=0.0.36",
    "sphinx-multiversion>=0.2.4",
    "sphinx-tabs>=3.5.0",
]
